fix auto input zoom on safari mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -55,6 +55,10 @@ html, body {
 	min-height: 100%;
 }
 
+input {
+    font-size: 100%;
+}
+
 body {
     font-family: -apple-system, "Helvetica Neue" , Sahel, sans-serif;
 }
